--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -1,6 +1,7 @@
 ---
 layout: default
 fa: btc
+image: https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2016/12/bitcoin-796x259.jpg
 link: https://thenextweb.com/evergreen/2017/07/04/ultimate-3500-word-plain-english-guide-blockchain/#.tnw_zc4TPhV7
 description: The ultimate, 3500-word, plain English guide to blockchain
 
