slight re-wording

--- a/_posts/2017-09-16-medium.md
+++ b/_posts/2017-09-16-medium.md
@@ -1,6 +1,6 @@
 ---
 image: img/medium_word.png
 link: https://medium.com/blockchain-manchester
-description: Our latest medium posts
+description: We prefer coding but do occasionally write things up 
 
 ---
