--- a/_posts/2017-09-15-meetup0.md
+++ b/_posts/2017-09-15-meetup0.md
@@ -1,5 +1,5 @@
 ---
-image: /img/genesis.jpg
+image: /img/genesis.png
 link: https://medium.com/blockchain-manchester/blockchain-manchester-meetup-0-genesis-4ef91c0682a
 description: Write up on out first ever meet-up: Genesis
 
