--- a/_posts/2017-09-16-medium.md
+++ b/_posts/2017-09-16-medium.md
@@ -1,6 +1,6 @@
 ---
-image: img/medium_word.png
+image: img/bm_medium.png
 link: https://medium.com/blockchain-manchester
-description: We prefer coding but do occasionally write things up 
+description: Medium - We prefer coding but do occasionally write things up 
 
 ---
