--- a/_posts/2017-09-19-meetup0.md
+++ b/_posts/2017-09-19-meetup0.md
@@ -1,6 +1,6 @@
 ---
-image: /img/genesis.png
+image: img/genesis.png
 link: https://medium.com/blockchain-manchester/blockchain-manchester-meetup-0-genesis-4ef91c0682a
-description: Write up on out first ever meet-up: Genesis
+description: Write up about first meet-up
 
 ---
